# AI-coding-agents-boilerplate

./: .gitignore  BRAND_CONFIG.md  FEATURES.md  PLAN.md  PLAN_REFACTOR.md  README.md  RULES.md  files.txt
.beads/: issues.jsonl
.sisyphus/: ralph-loop.local.md
install/: Cargo.toml
python/: README.md  pyproject.toml
python/docs/: config-reference.md  extension-model.md  feature-packs.md  migration.md
python/examples/coding-agent-with-mcp/: README.md
python/examples/minimal/: README.md
python/src/agent_boilerplate/: __init__.py  feature_ops.py  scaffold.py
python/src/agent_boilerplate/commands/: doctor.py  feature.py
python/src/agent_boilerplate/config/: loader.py  models.py
python/src/agent_boilerplate/core/: runtime.py
python/src/agent_boilerplate/entrypoints/: cli.py
python/src/agent_boilerplate/prompts/: composer.py  system.md
python/src/agent_boilerplate/registry/: agents.py  features.py  skills.py
python/templates/base/: README.md  agentkit.toml
python/templates/base/.agent/agents/: planner.agent.json  reviewer.agent.json
python/templates/base/.agent/features/github-pr-review/: feature.json
python/templates/base/.agent/features/github-pr-review/files/.agent/agents/: review-agent.agent.json
python/templates/base/.agent/prompts/sections/: coding-style.md  verification.md
python/templates/base/.agent/skills/add-feature/: SKILL.md
python/templates/base/src/__PACKAGE_NAME__/: cli.py
python/tests/: test_agent_boilerplate.py
references/: README.md
scripts/: audit_files_coverage.py
tests/: test_capability_matrix.py  (+65 more)
(+420 files in other folders)
